--- a/themes/blowfish/exampleSite/layouts/partials/recent-articles-demo.html
+++ b/themes/blowfish/exampleSite/layouts/partials/recent-articles-demo.html
@@ -1,5 +1,5 @@
 {{ $recentArticles := 5 }}
-{{ $showMoreLinkDest := "/posts/" }}
+{{ $showMoreLinkDest := "/AI/" }}
 {{ if index .Site.Params.homepage "showRecentItems" }}
 {{ $recentArticles = .Site.Params.homepage.showRecentItems }}
 {{ end }}
